# languages_agent

./: .env.example  .gitignore  README.md  pyproject.toml  uv.toml
app/: __init__.py  agents.py  config.py  db.py  models.py  routes.py  seed.py  utilities.py
app/agents/: __init__.py  agents.py
app/agents/support/nodes/speach_corrector/: node.py  prompt.py
app/agents/support/nodes/speach_evaluator/: node.py  prompt.py
app/blueprints/auth/: __init__.py  routes.py
app/blueprints/auth/templates/: login.html  register.html
app/blueprints/main_chat/: __init__.py  routes.py
app/blueprints/main_chat/templates/: chat.html
app/blueprints/voice_chat/: __init__.py  routes.py
app/blueprints/voice_chat/static/css/: voice_chat.css
app/blueprints/voice_chat/static/js/: script.js
app/blueprints/voice_chat/templates/: voice_chat.html
app/static/css/: style.css
app/static/js/: chat.js
app/templates/: base.html  chat.html
app/templates/auth/: login.html  register.html
uploaded_audio/: user_audio.webm
